# Trifle

./: .clang-format  .gitignore  CMakeLists.txt  README
Trifle.Engine/: CMakeLists.txt
Trifle.Engine/src/: GLGameWindow.cpp  GLGameWindow.h  GLInclude.h  GameObjectManager.cpp  GameObjectManager.h  GameWindow.cpp  GameWindow.h  trifle.cpp  trifle.h
Trifle.Engine/src/Components/: Camera.h  Collider.cpp  Collider.h  ColourComponent.h  Component.h  Components.h  EntityData.h  Model.cpp  Model.h  Model3D.cpp  Model3D.h  Movement.h  Projection.cpp  Projection.h  Shader.cpp  Shader.h  Target.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h
Trifle.Engine/src/Core/: ComponentArray.cpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  ComponentRegister.h  Core.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityRegister.cpp  EntityRegister.h  EntityService.h  Event.h  EventArgs.h  EventHandler.cpp  EventHandler.h  EventManager.cpp  EventManager.h  EventRegister.cpp  EventRegister.h  GameObject.h  GameTimer.cpp  GameTimer.h  IEntityRegister.h  IEventRegister.h  ResourceManager.cpp  ResourceManager.h  Stopwatch.cpp  Stopwatch.h  System.cpp  System.h  SystemManager.h  SystemRegister.h  Types.h
Trifle.Engine/src/Data/: BoundingBox.h  Converter.cpp  Converter.h  Data.h  GridPoint.h  Image.h  MeshData.h  Point2.h  Point3.h  Rectangle.h  ShapeBuilder.cpp  ShapeBuilder.h  ShapeData.h  UIntPoint2.h  UIntPoint3.h  Vertex.h  VoxelGrid.cpp  VoxelGrid.h
Trifle.Engine/src/DataStructures/: DataStrictures.h  DistanceMeasure.h  KDTree.cpp  KDTree.h  KDTreeNode.h  KDTreeTypes.h
Trifle.Engine/src/Entities/: Camera.cpp  Camera.h  Entities.h  VoxelBlock.cpp  VoxelBlock.h  VoxelEntity.cpp  VoxelEntity.h
Trifle.Engine/src/Entities/Voxel/: VoxelBlock.cpp  VoxelBlock.h
Trifle.Engine/src/Factory/: EntityBuilder.cpp  EntityBuilder.h  Factory.h  MaterialBuilder.h  MeshBuilder.cpp  MeshBuilder.h
Trifle.Engine/src/Graphics/: Canvas.cpp  Canvas.h  Graphics.h  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Trifle.Engine/src/Graphics/Text/: Font.cpp  Font.h
Trifle.Engine/src/Input/: Keyboard.cpp  Keyboard.h
Trifle.Engine/src/Math/: MatrixHelper.h  QuatHelper.h
Trifle.Engine/src/Resources/: FontResources.cpp  FontResources.h  Resources.h
Trifle.Engine/src/Systems/: CameraSystem.cpp  CameraSystem.h  Renderer.cpp  Renderer.h  Systems.h  VoxelGridSystem.cpp  VoxelGridSystem.h  VoxelRasteriser.cpp  VoxelRasteriser.h  VoxelRenderSystem.cpp  VoxelRenderSystem.h  VoxelRenderer.cpp  VoxelRenderer.h
Trifle.Engine/src/Threading/: ThreadPool.cpp  ThreadPool.h
Trifle.Engine/src/Util/: ShaderUtil.h  SysUtil.h  TextUtil.h  Util.h  VoxelGridHelper.h  VoxelGridUtil.h
Trifle.Engine/src/Util/Math/: MatrixHelper.h  QuatHelper.h  Random.h  VectorHelper.h  ViewportHelper.h
Trifle.Engine/src/Util/String/: StringHelper.h
Trifle.Engine/src/Voxel/: Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelChunkGrid.cpp  VoxelChunkGrid.h  VoxelGrid.h  VoxelGridCell.cpp  VoxelGridCell.h
Trifle.Game/: CMakeLists.txt
Trifle.Game/src/: Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Main.cpp  Program.cpp  Program.h
Trifle.Game/src/Data/: VoxelGrid.cpp  VoxelGrid.h
Trifle.Game/src/Graphics/: Renderer.cpp
Trifle.Game/src/Systems/: Game.cpp  Game.h
Trifle.HelloChunk/: CMakeLists.txt
Trifle.HelloChunk/src/: Main.cpp
Trifle.HelloChunk/src/Resources/Shaders/: Default.fs
Trifle.HelloChunk/src/Systems/: Game.cpp  Game.h
Trifle.HelloVoxel/: CMakeLists.txt
Trifle.HelloVoxel/src/: Program.h
Trifle.HelloVoxel/src/Resources/Shaders/: Default.vs
Trifle.HelloVoxel/src/Systems/: Game.cpp
Trifle.Test/: CMakeLists.txt  GTestHelper.h  Main.cpp  VoxelGridHelper_Tests.h  VoxelGrid_Tests.cpp
Trifle.Test/Tests/Core/: Camera_Tests.h  ComponentArray_Tests.h  ComponentManager_Tests.h  EntityManager_Tests.h  EntityRegister_Tests.h  EntityService_Tests.h  EventRegister_Tests.h  KDTree_Tests.h  Projection_Tests.h  Test.h  ThreadPool_Tests.h  VoxelChunkGrid_tests.h  VoxelGridHelper_Tests.h  VoxelGrid_Tests.h
cmake/modules/: FindDbgHelp.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGTest.cmake  FindPackageHandleStandardArgs.cmake
includes/glm/ext/: quaternion_common.inl
includes/gtest/: gtest.h
lib/freetype/lib/: freetype.lib  freetyped.lib
lib/freetype/lib/pkgconfig/: freetype2.pc
lib/glfw/lib/: glfw3.lib
lib/glm/lib/: glm.lib
lib/gtest/lib/Debug/: gtest_main.lib
lib/gtest/lib/Release/: gtest_main.lib
